added oauth for node

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "npm": "^6.1.0",
+    "passport-oauth2-password-grant": "0.0.4",
     "sequelize": "^4.37.10"
   }
 }
