--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
+    "nodemailer": "^4.6.7",
     "noty": "^3.2.0-beta",
     "npm": "^6.1.0",
     "passport-oauth2-password-grant": "0.0.4",
