--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
     "md5": "^2.2.1",
-    "morgan": "~1.9.0",
-    "mysql": "^2.15.0",
-    "mysql2": "^1.5.3",
-    "nodemailer": "^4.6.7",
+    "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
+    "nodemailer": "^4.7.0",
     "noty": "^3.2.0-beta",
-    "npm": "^6.1.0",
+    "npm": "^6.4.1",
     "passport-oauth2-password-grant": "0.0.4",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.41.2"
   }
 }
